--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header">
         <div class="container header_container">
             <a class="header_logo" href="./index.html" target="_self">
-            <img src="./images/logo.jpg" alt="logotipe" width="80" height="80">
+            <img src="./images/logo.jpg" alt="logotipe" width="60" height="60">
         </a>
         <ul class="social-list">
             <li class="social-list_item"><a href="">
@@ -48,7 +48,7 @@
             </ul>   
         </nav>
         <button class="mobile-menu-button">
-            <svg height="30" width="30">
+            <svg class="mobile-menu-button_icon" height="20" width="20">
                     <use href="./images/symbol-defs.svg#icon-menu"></use>
                 </svg>
         </button>
