--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="cz">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,46 +14,107 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/main.min.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/main.min.css" />
+  </head>
+  <body>
     <!-- Header -->
     <header class="header">
-        <div class="container header_container">
-            <a class="header_logo" href="./index.html" target="_self">
-            <img src="./images/logo.jpg" alt="logotipe" width="60" height="60">
+      <div class="container header_container">
+        <a class="header_logo" href="./index.html" target="_self">
+          <img src="./images/logo.jpg" alt="logotipe" width="60" height="60" />
         </a>
         <ul class="social-list">
-            <li class="social-list_item"><a href="">
-                <svg height="30" width="30">
-                    <use href="./images/symbol-defs.svg#icon-instagram-1"></use>
-                </svg>
-            </a></li>
-            <li class="social-list_item"><a href="">
-                <svg height="30" width="30">
-                    <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
-                </svg>
-            </a></li>
+          <li class="social-list_item">
+            <a href="">
+              <svg height="30" width="30">
+                <use href="./images/symbol-defs.svg#icon-instagram-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list_item">
+            <a href="">
+              <svg height="30" width="30">
+                <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+              </svg>
+            </a>
+          </li>
         </ul>
         <a class="header_contact-link" href="">Kontact</a>
         <nav class="nav">
-            <ul class="nav_list">
-                <li class="nav_item"><a class="nav_link" href=""></a>O NAS</li>
-                <li class="nav_item"><a class="nav_link" href=""></a>BEZPEČNOSTNÍ SLUŽBY</li>
-                <li class="nav_item"><a class="nav_link" href=""></a>ZABEZPEČOVACÍ A KAMEROVÉ SYSTÉMY</li>
-                <li class="nav_item"><a class="nav_link" href=""></a>MONITORING OBJEKTŮ PCO</li>
-                <li class="nav_item"><a class="nav_link" href=""></a>ÚKLIDOVÉ SLUŽBY</li>
-                <li class="nav_item"><a class="nav_link" href=""></a>HOSTESKY</li>
-                <li class="nav_item"><a class="nav_link" href=""></a>KARIÉRA</li>
-            </ul>   
+          <ul class="nav_list">
+            <li class="nav_item"><a class="nav_link" href=""></a>O NAS</li>
+            <li class="nav_item"><a class="nav_link" href=""></a>BEZPEČNOSTNÍ SLUŽBY</li>
+            <li class="nav_item">
+              <a class="nav_link" href=""></a>ZABEZPEČOVACÍ A KAMEROVÉ SYSTÉMY
+            </li>
+            <li class="nav_item"><a class="nav_link" href=""></a>MONITORING OBJEKTŮ PCO</li>
+            <li class="nav_item"><a class="nav_link" href=""></a>ÚKLIDOVÉ SLUŽBY</li>
+            <li class="nav_item"><a class="nav_link" href=""></a>HOSTESKY</li>
+            <li class="nav_item"><a class="nav_link" href=""></a>KARIÉRA</li>
+          </ul>
         </nav>
-        <button class="mobile-menu-button">
-            <svg class="mobile-menu-button_icon" height="20" width="20">
-                    <use href="./images/symbol-defs.svg#icon-menu"></use>
-                </svg>
+        <button class="mobile-menu-button" type="button" data-menu-open>
+          <svg class="mobile-menu-button_icon" height="30" width="30">
+            <use href="./images/symbol-defs.svg#icon-menu"></use>
+          </svg>
         </button>
-        </div>
+      </div>
     </header>
     <!-- /Header -->
-</body>
+    <!-- Mobile menu -->
+    <div class="mobile-menu" data-menu>
+      <div class="container mobile-menu__container">
+        <button class="mobile-menu__button" type="button" data-menu-close>
+          <svg class="mobile-menu__icon-close" height="19px" width="19px">
+            <use href="./images/symbol-defs.svg#icon-close"></use>
+          </svg>
+        </button>
+        <div class="nav-field">
+          <nav class="mobile-nav">
+            <ul class="mobile-nav__list">
+              <li class="mobile-nav__item">
+                <a class="mobile-nav__link" href="./index.html" target="_self">O NAS</a>
+              </li>
+              <li class="mobile-nav__item">
+                <a class="mobile-nav__link" href="">BEZPEČNOSTNÍ SLUŽBY</a>
+              </li>
+              <li class="mobile-nav__item">
+                <a class="mobile-nav__link" href="">ZABEZPEČOVACÍ A KAMEROVÉ SYSTÉMY</a>
+              </li>
+              <li class="mobile-nav__item">
+                <a class="mobile-nav__link" href="">MONITORING OBJEKTŮ PCO</a>
+              </li>
+              <li class="mobile-nav__item">
+                <a class="mobile-nav__link" href="">ÚKLIDOVÉ SLUŽBY</a>
+              </li>
+              <li class="mobile-nav__item"><a class="mobile-nav__link" href="">HOSTESKY</a></li>
+              <li class="mobile-nav__item"><a class="mobile-nav__link" href="">KARIÉRA</a></li>
+              <li class="mobile-nav__item"> <a class="mobile-nav__link" href="">KONTACT</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="contact-field">
+            <ul class="mobile-social-list">
+              <li class="mobile-social-list__item">
+                <a class="mobile-social-list__link" href="">
+                  <svg class="mobile-social-list__icon" height="30" width="30">
+                    <use href="./images/symbol-defs.svg#icon-instagram-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-social-list__item">
+                <a class="mobile-social-list__link" href="">
+                  <svg class="mobile-social-list__icon"  height="30" width="30">
+                    <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- Mobile menu -->
+    <script src="./js/menu.js" type="module"></script>
+  </body>
 </html>
