--- a/index.html
+++ b/index.html
@@ -21,36 +21,70 @@
     <header class="header">
       <div class="container header__container">
         <div class="header__menu-field">
-            <a class="header__logo" href="./index.html" target="_self">
-                <picture>
-                    <source srcset="./images/logo.jpg 1x, ./images/logo_2x.jpg 2x" type="image/jpeg" media="(min-width: 1200px)" width="110" height="110" >
-                    <source srcset="./images/logo.webp 1x, ./images/logo_2x.webp 2x" type="image/webp" media="(min-width: 1200px)" width="110" height="110" >
-                    <source srcset="./images/logo.webp 1x, ./images/logo_2x.webp 2x" type="image/webp" media="(min-width: 768px)" width="85" height="85" >
-                    <source srcset="./images/logo.jpg 1x, ./images/logo_2x.jpg 2x" type="image/jpeg" media="(min-width: 768px)" width="85" height="85" >
-                    <source srcset="./images/logo.webp 1x, ./images/logo_2x.webp 2x" type="image/webp" width="60" height="60">
-                    <source srcset="./images/logo.jpg 1x, ./images/logo_2x.jpg 2x" type="image/jpeg" width="60" height="60">
-                    <img src="./images/logo.jpg" alt="logotipe" width="60" height="60" />
-                </picture>
-        </a>
-        <div class="header__social-field">
+          <a class="header__logo" href="./index.html" target="_self">
+            <picture>
+              <source
+                srcset="./images/logo.jpg 1x, ./images/logo_2x.jpg 2x"
+                type="image/jpeg"
+                media="(min-width: 1200px)"
+                width="110"
+                height="110"
+              />
+              <source
+                srcset="./images/logo.webp 1x, ./images/logo_2x.webp 2x"
+                type="image/webp"
+                media="(min-width: 1200px)"
+                width="110"
+                height="110"
+              />
+              <source
+                srcset="./images/logo.webp 1x, ./images/logo_2x.webp 2x"
+                type="image/webp"
+                media="(min-width: 768px)"
+                width="85"
+                height="85"
+              />
+              <source
+                srcset="./images/logo.jpg 1x, ./images/logo_2x.jpg 2x"
+                type="image/jpeg"
+                media="(min-width: 768px)"
+                width="85"
+                height="85"
+              />
+              <source
+                srcset="./images/logo.webp 1x, ./images/logo_2x.webp 2x"
+                type="image/webp"
+                width="60"
+                height="60"
+              />
+              <source
+                srcset="./images/logo.jpg 1x, ./images/logo_2x.jpg 2x"
+                type="image/jpeg"
+                width="60"
+                height="60"
+              />
+              <img src="./images/logo.jpg" alt="logotipe" width="60" height="60" />
+            </picture>
+          </a>
+          <div class="header__social-field">
             <ul class="social-list">
-          <li class="social-list__item">
-            <a href="">
-              <svg height="30" width="30" class="social-list__icon">
-                <use href="./images/symbol-defs.svg#icon-instagram-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list__item">
-            <a href="">
-              <svg height="30" width="30" class="social-list__icon">
-                <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-        <a class="header__contact-link" href="">KONTACT</a>
-        </div>
+              <li class="social-list__item">
+                <a href="">
+                  <svg height="30" width="30" class="social-list__icon">
+                    <use href="./images/symbol-defs.svg#icon-instagram-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list__item">
+                <a href="">
+                  <svg height="30" width="30" class="social-list__icon">
+                    <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+            <a class="header__contact-link" href="">KONTACT</a>
+          </div>
         </div>
         <nav class="nav">
           <ul class="nav__list">
@@ -101,49 +135,63 @@
               </li>
               <li class="mobile-nav__item"><a class="mobile-nav__link" href="">HOSTESKY</a></li>
               <li class="mobile-nav__item"><a class="mobile-nav__link" href="">KARIÉRA</a></li>
-              <li class="mobile-nav__item"> <a class="mobile-nav__link" href="">KONTACT</a></li>
+              <li class="mobile-nav__item"><a class="mobile-nav__link" href="">KONTACT</a></li>
             </ul>
           </nav>
         </div>
         <div class="contact-field">
-            <ul class="mobile-social-list">
-              <li class="mobile-social-list__item">
-                <a class="mobile-social-list__link" href="">
-                  <svg class="mobile-social-list__icon" height="30" width="30">
-                    <use href="./images/symbol-defs.svg#icon-instagram-1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="mobile-social-list__item">
-                <a class="mobile-social-list__link" href="">
-                  <svg class="mobile-social-list__icon"  height="30" width="30">
-                    <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+          <ul class="mobile-social-list">
+            <li class="mobile-social-list__item">
+              <a class="mobile-social-list__link" href="">
+                <svg class="mobile-social-list__icon" height="30" width="30">
+                  <use href="./images/symbol-defs.svg#icon-instagram-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-social-list__item">
+              <a class="mobile-social-list__link" href="">
+                <svg class="mobile-social-list__icon" height="30" width="30">
+                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
     <!-- /Mobile menu -->
     <!--Hero-->
     <section class="hero">
+      <div class="hero_background-field">
+        <div class="container">
+          <h1 class="hero__title">CHRÁNÍME VÁS A VÁŠ MAJETEK</h1>
+          <h2 class="hero__subtitle">C.P.B. SECURITY</h2>
+          <button class="hero__button" type="button">KONTAKTUJTE MĚ</button>
+        </div>
+      </div>
       <div class="container">
-        <h1 class="hero__title">CHRÁNÍME VÁS A VÁŠ MAJETEK</h1>
-        <h2 class="hero__subtitle">C.P.B. SECURITY</h2>
-        <button class="hero__button" type="button">KONTAKTUJTE MĚ</button>
-        <p class="hero__text">Jsme licencovaná a vázaná bezpečnostní / uklidová společnost s vizí, 
-posláním a metodami pro poskytování našich služeb.
-Naším cílem je řešit nenaplněné bezpečnostní / uklidové potřeby 
-komerčních, rezidenčních, institucionálních a individuálních klientů .
-Jsme firma co pomáhá a dobrý partner .
-Používáme osvědčené strategie k navrhování spolehlivých 
-bezpečnostních 
-programů přizpůsobených potřebám konkrétních jednotlivců, skupin, 
-společností a/nebo míst. Sloužíme organizacím v celé řadě oblasti i 
-mimo ni.</p>
+        <p class="hero__text">
+          Jsme licencovaná a vázaná bezpečnostní / uklidová společnost s vizí, posláním a metodami
+          pro poskytování našich služeb. Naším cílem je řešit nenaplněné bezpečnostní / uklidové
+          potřeby komerčních, rezidenčních, institucionálních a individuálních klientů . Jsme firma
+          co pomáhá a dobrý partner . Používáme osvědčené strategie k navrhování spolehlivých
+          bezpečnostních programů přizpůsobených potřebám konkrétních jednotlivců, skupin,
+          společností a/nebo míst. Sloužíme organizacím v celé řadě oblasti i mimo ni.
+        </p>
       </div>
     </section>
+    <footer class="footer">
+      <div class="container">
+        <address class="address">
+          <ul class="address-list">
+            <li class="address-list__item"><a href="" class="address-list__link"></a></li>
+            <li class="address-list__item"><a href="" class="address-list__link"></a></li>
+            <li class="address-list__item"><a href="" class="address-list__link"></a></li>
+          </ul>
+        </address>
+      </div>
+    </footer>
+
     <script src="./js/menu.js" type="module"></script>
   </body>
 </html>
