--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="../sass/main.scss" />
   </head>
   <body>
     <!-- Header -->
@@ -24,46 +24,46 @@
           <a class="header__logo" href="./index.html" target="_self">
             <picture>
               <source
-                srcset="./images/logo.jpg 1x, ./images/logo_2x.jpg 2x"
+                srcset="../images/logo.jpg 1x, ../images/logo_2x.jpg 2x"
                 type="image/jpeg"
                 media="(min-width: 1200px)"
                 width="110"
                 height="110"
               />
               <source
-                srcset="./images/logo.webp 1x, ./images/logo_2x.webp 2x"
+                srcset="../images/logo.webp 1x, ../images/logo_2x.webp 2x"
                 type="image/webp"
                 media="(min-width: 1200px)"
                 width="110"
                 height="110"
               />
               <source
-                srcset="./images/logo.webp 1x, ./images/logo_2x.webp 2x"
+                srcset="../images/logo.webp 1x, ../images/logo_2x.webp 2x"
                 type="image/webp"
                 media="(min-width: 768px)"
                 width="85"
                 height="85"
               />
               <source
-                srcset="./images/logo.jpg 1x, ./images/logo_2x.jpg 2x"
+                srcset="../images/logo.jpg 1x, ../images/logo_2x.jpg 2x"
                 type="image/jpeg"
                 media="(min-width: 768px)"
                 width="85"
                 height="85"
               />
               <source
-                srcset="./images/logo.webp 1x, ./images/logo_2x.webp 2x"
+                srcset="../images/logo.webp 1x, ../images/logo_2x.webp 2x"
                 type="image/webp"
                 width="60"
                 height="60"
               />
               <source
-                srcset="./images/logo.jpg 1x, ./images/logo_2x.jpg 2x"
+                srcset="../images/logo.jpg 1x, ../images/logo_2x.jpg 2x"
                 type="image/jpeg"
                 width="60"
                 height="60"
               />
-              <img src="./images/logo.jpg" alt="logotipe" width="60" height="60" />
+              <img src="../images/logo.jpg" alt="logotipe" width="60" height="60" />
             </picture>
           </a>
           <div class="header__social-field">
@@ -71,14 +71,14 @@
               <li class="social-list__item">
                 <a href="">
                   <svg height="30" width="30" class="social-list__icon">
-                    <use href="./images/symbol-defs.svg#icon-instagram-1"></use>
+                    <use href="../images/symbol-defs.svg#icon-instagram-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list__item">
                 <a href="">
                   <svg height="30" width="30" class="social-list__icon">
-                    <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                    <use href="../images/symbol-defs.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
               </li>
@@ -101,7 +101,7 @@
         </nav>
         <button class="mobile-menu-button" type="button" data-menu-open>
           <svg class="mobile-menu-button__icon" height="30" width="30">
-            <use href="./images/symbol-defs.svg#icon-menu"></use>
+            <use href="../images/symbol-defs.svg#icon-menu"></use>
           </svg>
         </button>
       </div>
@@ -112,7 +112,7 @@
       <div class="container mobile-menu__container">
         <button class="mobile-menu__button" type="button" data-menu-close>
           <svg class="mobile-menu__icon-close" height="19px" width="19px">
-            <use href="./images/symbol-defs.svg#icon-close"></use>
+            <use href="../images/symbol-defs.svg#icon-close"></use>
           </svg>
         </button>
         <div class="nav-field">
@@ -144,14 +144,14 @@
             <li class="mobile-social-list__item">
               <a class="mobile-social-list__link" href="">
                 <svg class="mobile-social-list__icon" height="30" width="30">
-                  <use href="./images/symbol-defs.svg#icon-instagram-1"></use>
+                  <use href="../images/symbol-defs.svg#icon-instagram-1"></use>
                 </svg>
               </a>
             </li>
             <li class="mobile-social-list__item">
               <a class="mobile-social-list__link" href="">
                 <svg class="mobile-social-list__icon" height="30" width="30">
-                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                  <use href="../images/symbol-defs.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
@@ -192,6 +192,6 @@
       </div>
     </footer>
 
-    <script src="./js/menu.js" type="module"></script>
+    <script src="/src/js/index.js" type="module"></script>
   </body>
 </html>
