--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./sass/index.scss" />
+    <link rel="stylesheet" href="../src/sass/index.scss" />
   </head>
   <body>
     <include src="./partials/header.html"></include>
