end section services and start career

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,9 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/mobile_menu.html"></include>
     <include src="./partials/hero.html"></include>
-    <include src="./partials/security_services.html"></include>
+    <include src="./partials/our_services.html"></include>
+    <include src="./partials/contact.html"></include>
+    <include src="./partials/career.html"></include>
 
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal_menu.html"></include>
