--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <include src="./partials/mobile_menu.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/our_services.html"></include>
+    <include src="./partials/galerie.html"></include>
     <include src="./partials/contact.html"></include>
     <include src="./partials/career.html"></include>
 
