--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
 
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal_menu.html"></include>
+    <include src="./partials/formular.html"></include>
     <script src="/src/js/index.js" type="module"></script>
   </body>
 </html>
