add service pages

--- a/src/index.html
+++ b/src/index.html
@@ -21,13 +21,18 @@
     <include src="./partials/mobile_menu.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/our_services.html"></include>
-    <include src="./partials/galerie.html"></include>
     <include src="./partials/contact.html"></include>
     <include src="./partials/career.html"></include>
 
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal_menu.html"></include>
     <include src="./partials/formular.html"></include>
+    <include src="./partials/helpers/guard_details.html"></include>
+    <include src="./partials/helpers/camera_details.html"></include>
+    <include src="./partials/helpers/monitoring_details.html"></include>
+    <include src="./partials/helpers/cleaning_details.html"></include>
+    <include src="./partials/helpers/hostess_details.html"></include>
+
     <script src="/src/js/index.js" type="module"></script>
   </body>
 </html>
