--- a/src/index.html
+++ b/src/index.html
@@ -34,5 +34,6 @@
     <include src="./partials/helpers/hostess_details.html"></include>
 
     <script src="/src/js/index.js" type="module"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
   </body>
 </html>
